# pepbench

./: .bumpversion.toml  .gitignore  .ruff.toml  CHANGELOG.md  README.md  _tasks.py  pyproject.toml
.github/workflows/: publish.yml  test-and-lint.yml
.hpc/: README.md  debugger.sh  init_and_run.sh  pydev_proxy.py  pydev_proxy_slurm.py  python.sh  submit_wrapper.py
docs/: .gitignore  button.py  conf.py  index.rst
docs/examples/: index.rst
docs/guides/: algorithms.rst  datasets.rst  datatypes.rst  evaluation.rst  extending.rst  index.rst  pipelines.rst  usages.rst
docs/modules/: index.rst
docs/modules/algorithms/: index.rst
docs/modules/data_handling/: index.rst
docs/modules/datasets/: index.rst
docs/modules/evaluation/: index.rst
docs/modules/pipelines/: index.rst
docs/modules/plotting/: index.rst
docs/modules/utils/: index.rst
docs/source/about/: AUTHORS.md  index.rst
docs/source/contributing/: CONTRIBUTING.md
docs/templates/: class.rst
example_data/: _example_data_registry.txt
example_data/VP_001/: vp_001_ecg_data.csv  vp_001_icg_data.csv
examples/: B_Point_Detection_Example.ipynb  B_Point_Plotting_Example.ipynb  Evaluation_Example.ipynb  Example_Dataset.ipynb  PEP_Extraction_Evaluation_Example.ipynb  PEP_Extraction_Pipeline_Example.ipynb  Q_Peak_Detection_Example.ipynb  Q_Peak_Plotting_Example.ipynb  README.rst
pepbench/: __init__.py
pepbench/_utils/: _types.py  exceptions.py
pepbench/algorithms/: __init__.py  ecg.py  heartbeat_segmentation.py  icg.py  outlier_correction.py
pepbench/data_handling/: __init__.py  _data_handling.py  utils.py
pepbench/datasets/: __init__.py  _base_pep_extraction_dataset.py  _helper.py
pepbench/evaluation/: __init__.py  _error_metrics.py  _evaluation.py  _heartbeat_matching.py  _scoring.py  _scoring_aggregator.py
pepbench/export/: __init__.py  _latex.py
pepbench/heartbeat_matching/: _heartbeat_matching.py
pepbench/io/: __init__.py  _io.py  _ml_helper.py
pepbench/pipelines/: __init__.py  _base_pipeline.py  _helper.py  _pipeline.py  _pipeline_reference_b_point.py  _pipeline_reference_q_peak.py  _pipeline_reference_q_point.py  _pipeline_reference_q_wave.py
pepbench/plotting/: __init__.py  _base_plotting.py  _utils.py  algorithms.py  results.py
pepbench/utils/: __init__.py  _rename_maps.py  styling.py
playground/: Algorithm_Tests.ipynb  Analysis_Tests.ipynb  Challenge_Tests.ipynb  DataVisualizer.ipynb  Dataset_Tests.ipynb  Notes.md  Plotting_Tests.ipynb
src/pepbench/: __init__.py  example_data.py  examples.py
tests/: test_algorithms.py  test_annotations.py  test_data_handling.py  test_dataset_empkins.py  test_dataset_guardian.py  test_example_data.py
(+8128 files in other folders)
